--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <div class="chatbot-wrapper">
             <div class="header">
                 <h1>Chatbot de NFL</h1>
-                <p class="subtitle">Especialista en fútbol americano profesional</p>
+                <p class="subtitle">Especialista en fútbol americano profesional. Hecho por Joel Rojas</p>
             </div>
             
             <div class="chat-box" id="chatBox">
